Adding SVG images

--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -190,7 +190,7 @@
         {
             jAlert("Please provide end date for report", "Incomplete Information");
         }
-        else if((type == "site report") && (document.getElementById('site').value.trim() == ""))
+        else if((type == "site report") && (document.getElementById('sitename').value.trim() == ""))
         {
             jAlert("Please provide site name", "Incomplete Information");
         }
