--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -143,6 +143,7 @@
     </div>
 
     <!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
     <%unless action_name.match(/search/i)%>
       <%if not action_name.match(/production/i) and not action_name.match(/market_chart/i) and not action_name.match(/industry_chart/i)%>
         <%=javascript_include_tag "jquery"%>                                         
@@ -158,7 +159,8 @@
       <%=javascript_include_tag "bootstrap-button"%>                                         
       <%=javascript_include_tag "bootstrap-collapse"%>                                         
       <%=javascript_include_tag "bootstrap-carousel"%>                                         
-      <%=javascript_include_tag "bootstrap-typeahead"%>                                         
+      <%=javascript_include_tag "bootstrap-typeahead"%> 
+      <%=javascript_include_tag "application"%>                                         
     <%end%>
                                                                                 
     <%=javascript_include_tag "placeholder"%>                                         
