--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -63,8 +63,12 @@
     display: none ;
   }
 </style>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+    <script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+    <script src="/javascripts/highcharts.js"></script>
+    <script src="/javascripts/exporting.js"></script>
+    <script src="/javascripts/standalone-framework.src.js"></script>
 <script type="text/javascript" charset="utf-8">
-  $(document).ready(function() {
     $('#datalist').dataTable({
       "aaSorting": [[ 0, "asc" ]],
       'iDisplayLength': 10,
@@ -81,7 +85,6 @@
         { "sTitle": "omanidwa", "sClass": "right"}
       ]
     });
-  } );
 
   function trend(counts)
   {
@@ -134,8 +137,24 @@
 </script>
 
 
-<div >
-  <span style="font-weight: bold;margin-left: 0.5%;">Select Site</span>
+    <div class="heading" >
+      <table class="menu" cellspacing="0px" style="width:100%;">
+        <tr>
+          <td style="text-align: left;vertical-align: text-top;">
+            <span style="font-size: 150%;font-weight:bold;color: #000000;font-family:arial;">
+              <%= @title  %>
+            </span>
+          </td>
+          <td style= "" >
+            <button class="btn" style="float:right"  id="cat"  onclick="loadValues()">Show tins</button>
+          </td>
+        </tr>
+      </table>
+
+    </div>
+
+	  
+	<span style="font-weight: bold;margin-left: 0.5%;">Select Site</span>
   <select id="sites" style="margin-left: 3%; width: 20%; font-size: 20px;" name="site_name" id='site' onchange="loadSite(this.value)">
     <% (@sites || []).each do |site| %>
       <option><%= site %></option>
