--- a/app/views/report/drug_utilization_report.html.erb
+++ b/app/views/report/drug_utilization_report.html.erb
@@ -177,6 +177,23 @@
 
 </script>
 
+<div class="heading" >
+  <table class="menu" cellspacing="0px" style="width:100%;">
+    <tr>
+      <td style="text-align: left;vertical-align: text-top;">
+            <span style="font-size: 150%;font-weight:bold;color: #000000;font-family:arial;">
+              <%= @title  %>
+            </span>
+      </td>
+      <td style= "" >
+        <button class="btn" style="float:right"  id="cat"  onclick="loadValues()">Show tins</button>
+      </td>
+    </tr>
+  </table>
+
+</div>
+
+
 
 <div >
         <span style="font-weight: bold;margin-left: 0.5%;">Select Site</span>
