--- a/public/stylesheets/demo_table.css
+++ b/public/stylesheets/demo_table.css
@@ -86,19 +86,19 @@
 }
 
 .paginate_disabled_previous {
-	background-image: url('../images/back_disabled.jpg');
+	background-image: url('../images/back_disabled.png');
 }
 
 .paginate_enabled_previous {
-	background-image: url('../images/back_enabled.jpg');
+	background-image: url('../images/back_enabled.png');
 }
 
 .paginate_disabled_next {
-	background-image: url('../images/forward_disabled.jpg');
+	background-image: url('../images/forward_disabled.png');
 }
 
 .paginate_enabled_next {
-	background-image: url('../images/forward_enabled.jpg');
+	background-image: url('../images/forward_enabled.png');
 }
 
 
