--- a/app/views/report/_months_of_stock.erb
+++ b/app/views/report/_months_of_stock.erb
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+    <script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+    <script src="/javascripts/highcharts.js"></script>
+    <script src="/javascripts/exporting.js"></script>
+    <script src="/javascripts/standalone-framework.src.js"></script>
     <title>Stock chart</title>
     <style>
 
@@ -140,7 +145,7 @@
           }
         }
       },
-      series: dataG()            
+      series: dataG()
                 
     });
   });
