--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -1,241 +1,145 @@
-<style type="text/css">
-  input{
-    width: auto;
-    font-size: 28px;
-  }
-  .cat{
-    display: none;
-  }
-  select{
-    width: 100%;
-    font-size: 28px;
-  }
-  button{
-    width: auto;
-    font-size: 28px;
-  }
-  table.fullpage{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -1%;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  .halfpage tr{
-    height: 80px;
-
-  }
-
-  .link{
-    float: right;
-    position: absolute;
-    z-index: 1;
-    right: 1%;
-    top: 4px;
-  }
-
-  th{
-    text-align: left;
-    font-size: 16px;
-    background: #66CC66;
-    padding: 0px;
-    padding-top: 2px;
-    color: black;
-  }
-  #datalist td{
-    text-align: left;
-    font-size: 16px;
-    color: darkslategrey;
-    background-color: azure;
-  }
-
-  .header {
-    position: absolute;
-    top: 3%;
-    z-index: 0;
-    height: 10%;
-    overflow: hidden;
-  }
-
-</style>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
 <script>
-  var drug_map = {}
-<%@drug_map.each do |map|%>
+    var drug_map = {}
+    <%@drug_map.each do |map|%>
     drug_map["<%= map[0]%>"] = "<%= map[1] %>"
-<%end
+    <%end
 
-@d_map = @drug_map.inject({}){|h, arr|next if arr.blank?;  h[arr[0]] = arr[1]; h}
-%>
+    @d_map = @drug_map.inject({}){|h, arr|next if arr.blank?;  h[arr[0]] = arr[1]; h}
+    %>
 </script>
 
-<div class="stock-data">
+<%if params[:name] == "months_of_stock"%>
+    <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>;" name="site_name"
+            onchange="loadSiteChart(this.value, 0, 9)">
+      <% (@sites || []).each do |site| %>
+          <option><%= site %></option>
+      <% end %>
+    </select>
+<%else%>
+    <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>;" name="site_name"
+            onchange="loadSiteChart(this.value, 0, 9)">
+      <% (@drugs || []).each do |dg| %>
+          <option value="<%= dg%>"><%= @d_map[dg] %></option>
+      <% end %>
+    </select>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: lightblue; font-size: 16px;"><%=  params[:start_date].to_date.strftime("%d-%b-%Y") %></span>
+    <span style="color: rosybrown; font-size: 14px"> To </span>
+    <span style="color: lightblue; font-size: 16px;"><%=   params[:end_date].to_date.strftime("%d-%b- %Y") rescue ("") %></span>
+<%end%>
 
-  <table  class="fullpage header" width="100" cellspacing="5px" cellpadding="10px">
-
-    <tr>
-
-      <td style="padding-left: 5%; font-size: 20px;"><span style="color: lightblue;font-weight: bold;">Display results for :</span>
-        <%if params[:name] == "months_of_stock"%>
-          <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>; font-size: 20px;" name="site_name"
-                  onchange="loadSiteChart(this.value, 0, 9)">
-                    <% (@sites || []).each do |site| %>
-              <option><%= site %></option>
-            <% end %>
-          </select>
-        <%else%>
-          <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>; font-size: 20px;" name="site_name"
-                  onchange="loadSiteChart(this.value, 0, 9)">
-                    <% (@drugs || []).each do |dg| %>
-              <option value="<%= dg%>"><%= @d_map[dg] %></option>
-            <% end %>
-          </select>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: lightblue; font-size: 16px;"><%=  params[:start_date].to_date.strftime("%d-%b-%Y") %></span>
-          <span style="color: rosybrown; font-size: 14px"> To </ span>
-            <span style="color: lightblue; font-size: 16px;"><%=   params[:end_date].to_date.strftime("%d-%b- %Y") rescue ("") %></span>
-          <%end%>
-      </td>
-      <td>&nbsp</td>
-      <td id ="date" style="padding-left: 0px; color: lightblue; font-weight: bold;">&nbsp</td>
-
-    </tr>
-    <%  unless @stocks.blank? %>
-      <tr>
-        <th style="width: 37%">Drug </th>
-        <th style="width: 13%">Total Prescribed</th>
-        <th style="width: 13%">Total Dispensed</th>
-        <th style="width: 13%">Consumption rate <br /><sub style="font-size: 12px;">( per day)</sub></th>
-        <th style="width: 13%">Stock level<br /><sub style="font-size: 12px;">( pills)</sub></th>
-        <th>Stockout date <br /><sub style="font-size: 12px;">( estimated)</sub></th>
-      </tr>
-      <tr>
-        <td colspan="6">
-          <div id ="data-holder" style="height: 535px; overflow: auto;">
-            <table id ="datalist"  style="width: 100%;" width="100" cellspacing="4px" cellpadding="10px">
-
-            </table>
-          </div>
-        </td>
-      </tr>
-
-    </table>
-  <%else%>
-    <tr>
-      <td id="chart" style="width: 100%; height: 585px;">
-        &nbsp;
-      </td>
-
-    </tr>
-  <%end%>
+<div id="chart" style=" width: 100%;height: 70vh;">
 
 </div>
 
 <script type="text/javascript">
-  <!--
-  var stocks = {};
-  var update_dates = {};
-<%@stocks.keys.each do |key|%>
-  
+    <!--
+    var stocks = {};
+    var update_dates = {};
+    <%@stocks.keys.each do |key|%>
+
     stocks["<%= key %>"] = {};
-  <%@stocks[key].keys.each do |drug|%>
+    <%@stocks[key].keys.each do |drug|%>
 
-      stocks["<%= key %>"]["<%= drug %>"] = {};
+    stocks["<%= key %>"]["<%= drug %>"] = {};
     <% @stocks[key][drug].each do |k, v| %>
-        stocks["<%= key %>"]["<%= drug %>"]["<%= k %>"] = "<%= v%>";
+    stocks["<%= key %>"]["<%= drug %>"]["<%= k %>"] = "<%= v%>";
     <%end%>
-  <%end%>
-<%end%>
+    <%end%>
+    <%end%>
 
-<%@updates.each do |key, hash|%>
+    <%@updates.each do |key, hash|%>
     update_dates["<%= key %>"] = {}
-  <%hash.each do |k, v|%>
-      update_dates["<%= key %>"]["<%= k%>"] = "<%= v%>";
-  <%end%>
-<%end%>  
-  
-  function loadSiteChart(site, min, max, drg){
+    <%hash.each do |k, v|%>
+    update_dates["<%= key %>"]["<%= k%>"] = "<%= v%>";
+    <%end%>
+    <%end%>
 
-<% if params[:name] == "months_of_stock" %>
-      jQuery('#chart').empty().html("<span style='padding-left: 43.5%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=' + site + "&min=" + min + "&max=" + max);
-<% elsif params[:name] == "stock_movement" %>
-  <%if @drugs.blank?%>
+    function loadSiteChart(site, min, max, drg){
+
+        <% if params[:name] == "months_of_stock" %>
+        jQuery('#chart').empty().html("<span style='padding-left: 43.5%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=' + site + "&min=" + min + "&max=" + max);
+        <% elsif params[:name] == "stock_movement" %>
+        <%if @drugs.blank?%>
         jQuery('#chart').empty().html("<span style='padding-left: 20.5%; width: 100%; text-align: center; font-size: 30px;'> \n\
                                                                                 No stock details found for specified time range </span>")
-  <%else%>
+        <%else%>
         jQuery('#chart').empty().html("<span style='padding-left: 43.5%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/stock_movement?start_date=<%= params[:start_date] %>&end_date=<%= params[:end_date] %>&site_name=<%= params[:site_name] %>&drug_name=' + escape(site));
-  <%end%>
-<%end%>
-  }
- 
-  function loadSite(site)
-  {
-    var data = stocks[site];
-    var drugs = Object.keys(data);
-    var table = document.getElementById("datalist");
-    var dateLabel = document.getElementById("date");
-    dateLabel.innerHTML = "";
-    table.innerHTML = "";
-    
-    for (var i = 0; i < drugs.length; i++){
-
-      var row = create("tr", "table-row", "");
-      row.style.width = "100%";
-      
-      var td1 = create("td", "table-data", drugs[i]);
-      td1.style.width = "37%";
-      td1.style.paddingLeft = "0px";
-      row.appendChild(td1);
-
-      var td2 = create("td", "table-data", data[drugs[i]]["prescribed"]);
-      td2.style.width = "13%";
-      td2.style.textAlign = "center";
-      row.appendChild(td2)
-
-      var td3 = create("td", "table-data", data[drugs[i]]["dispensed"]);
-      td3.style.width = "13%";
-      td3.style.textAlign = "center";
-      row.appendChild(td3)
-
-      var td4 = create("td", "table-data", data[drugs[i]]["rate"]);
-      td4.style.width = "13%";
-      td4.style.textAlign = "center";
-      row.appendChild(td4)
-      
-      var td5 = create("td", "table-data", data[drugs[i]]["stock_level"]);
-      td5.style.width = "13%";
-      td5.style.textAlign = "center";
-      row.appendChild(td5);
-
-      var td6 = create("td", "table-data", data[drugs[i]]["stockout_date"]);
-      row.appendChild(td6);
-      
-      table.appendChild(row);
+        <%end%>
+        <%end%>
     }
-<% if params[:type] == 'calculated' %>
-      dateLabel.innerHTML = "Raw data updated on " + update_dates[site]["calculated"];
-<%else%>
-      dateLabel.innerHTML = "Figures <%= params[:type].humanize.downcase %> done " + update_dates[site]["<%= params[:type].match(/clinic|supervision/)[0]%>"];
-<%end%>
-  }
-  function create(divType, type, data){
-    var node = document.createElement(divType);
-    node.style.diplay = type;
-    if (divType == "tr"){
-      node.style.fontSize = "12px";
-      node.style.padding = "0px";
-      node.style.background = "#FFFFFF";
-    }
-    if (data != ""){
-      node.innerHTML = data;
-    }
-    return node;
-  }
 
-  loadSiteChart(document.getElementById("sites").value, 0, 9);
-  
-  // loadSite(document.getElementById("sites").value);
-  //holder = document.getElementById("data-holder")
-  //holder.style.height = screen.width * 0.39 + "px";
+    function loadSite(site)
+    {
+        var data = stocks[site];
+        var drugs = Object.keys(data);
+        var table = document.getElementById("datalist");
+        var dateLabel = document.getElementById("date");
+        dateLabel.innerHTML = "";
+        table.innerHTML = "";
 
-  
-  //-->
+        for (var i = 0; i < drugs.length; i++){
+
+            var row = create("tr", "table-row", "");
+            row.style.width = "100%";
+
+            var td1 = create("td", "table-data", drugs[i]);
+            td1.style.width = "37%";
+            td1.style.paddingLeft = "0px";
+            row.appendChild(td1);
+
+            var td2 = create("td", "table-data", data[drugs[i]]["prescribed"]);
+            td2.style.width = "13%";
+            td2.style.textAlign = "center";
+            row.appendChild(td2)
+
+            var td3 = create("td", "table-data", data[drugs[i]]["dispensed"]);
+            td3.style.width = "13%";
+            td3.style.textAlign = "center";
+            row.appendChild(td3)
+
+            var td4 = create("td", "table-data", data[drugs[i]]["rate"]);
+            td4.style.width = "13%";
+            td4.style.textAlign = "center";
+            row.appendChild(td4)
+
+            var td5 = create("td", "table-data", data[drugs[i]]["stock_level"]);
+            td5.style.width = "13%";
+            td5.style.textAlign = "center";
+            row.appendChild(td5);
+
+            var td6 = create("td", "table-data", data[drugs[i]]["stockout_date"]);
+            row.appendChild(td6);
+
+            table.appendChild(row);
+        }
+        <% if params[:type] == 'calculated' %>
+        dateLabel.innerHTML = "Raw data updated on " + update_dates[site]["calculated"];
+        <%else%>
+        dateLabel.innerHTML = "Figures <%= params[:type].humanize.downcase %> done " + update_dates[site]["<%= params[:type].match(/clinic|supervision/)[0]%>"];
+        <%end%>
+    }
+    function create(divType, type, data){
+        var node = document.createElement(divType);
+        node.style.diplay = type;
+        if (divType == "tr"){
+            node.style.fontSize = "12px";
+            node.style.padding = "0px";
+            node.style.background = "#FFFFFF";
+        }
+        if (data != ""){
+            node.innerHTML = data;
+        }
+        return node;
+    }
+
+    loadSiteChart(document.getElementById("sites").value, 0, 9);
+
+    // loadSite(document.getElementById("sites").value);
+    //holder = document.getElementById("data-holder")
+    //holder.style.height = screen.width * 0.39 + "px";
+
+
+    //-->
+
 </script>
-
