--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,11 @@
         font-size: 80%;
       }
 
+      .container {
+        width: 99% !important;
+        margin: 0px 10px 0px 10px !important;
+      }
+
     </style>
     <%= stylesheet_link_tag "bootstrap-responsive" %>                                         
     <%#= stylesheet_link_tag "ie6" %>                                         
@@ -91,7 +96,7 @@
       <!-- Fixed navbar -->
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
-          <div class="container">
+          <div class="container" style="width:99%;">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -102,14 +107,15 @@
             <%if User.current%>
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li class="dropdown">
+                <li><a href="/report/index">Report</a></li>
+                <!--li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="/report/report_menu?type=delivery report">Delivery Report</a></li>
                     <li><a href="/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock">Months of Stock</a></li>
                     <li><a href="/report/report_menu?type=stock movement&name=stock_movement">Stock Movement</a></li>
                   </ul>
-                </li>
+                </li-->
                 <%if admin?%>                                           
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
