--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+    <script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+    <script src="/javascripts/highcharts.js"></script>
+    <script src="/javascripts/exporting.js"></script>
+    <script src="/javascripts/standalone-framework.src.js"></script>
     <!-- CSS -->
     <%= stylesheet_link_tag "bootstrap" %>                                         
     <style type="text/css">
