--- a/app/views/report/months_of_stock_main.html.erb
+++ b/app/views/report/months_of_stock_main.html.erb
@@ -17,42 +17,57 @@
         $('#container').highcharts({
             chart: {
                 type: 'bar',
+                borderWidth: 1,
+                plotBorderWidth: 1,
                 // Edit chart spacing
                 spacingBottom: 15,
                 spacingTop: 10,
                 spacingLeft: 10,
                 spacingRight: 10,
-
                 // Explicitly tell the width and height of a chart
-                width: null,
-                height: 700
+                height: (window.innerHeight - 50)
+
             },
             title: {
+                style: {
+                    fontFamily: "'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
+                    fontSize: '14px'
+                },
                 text: 'ARV Stock Levels At '+ '<%= @site.name %>'
             },
             xAxis: {
                 categories: drugs,
                 title: {
-                    text: "Drug Names"
+                    text: null,
+                    style: {
+                        font: "12px 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif"
+                    }
+
                 },
-                style: {
-                    color: 'black',
-                    fontSize: '10px'
+                labels: {
+                    style: {
+                        color: '#000000',
+                        font: "12px Arial, 'Helvetica Neue', Helvetica, sans-serif;"
+                    }
                 }
             },
             yAxis: {
                 min: 0,
                 max: 9,
+                tickInterval: 1,
                 title: {
                     text: 'Months of Stock',
-                    align: 'high'
-                },
-                style: {
-                    color: 'black',
-                    fontSize: '18px'
+                    align: 'high',
+                    style: {
+                        font: "13px 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif"
+                    }
                 },
                 labels: {
-                    overflow: 'justify'
+                    overflow: 'justify',
+                    style: {
+                        color: '#000000',
+                        font: "13px 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif"
+                    }
                 },
                 plotBands: [{ // mark the weekend
                     color: '#66CDAA',
@@ -81,6 +96,7 @@
                             parseInt((this.y*30 % 30)) + ( parseInt((this.y*30 % 30)) == 1 ? " day" :  " days");
 
                     return '<span  style= "font-weight: bold; font-size : 10px;">' +
+                            'Drug Name:  &nbsp&nbsp&nbsp&nbsp<span style="color: #097054; " >' + this.x + '</span> <br />' +
                             'Months of stock:  &nbsp&nbsp&nbsp<span style="color: #097054; " >' + stock_level_string + '</span> <br />' +
                             'Stock level:  &nbsp&nbsp&nbsp<span style="color: #097054; ">' + data_list[this.x]['stock_level'] + ' tins</span><br />' +
                             'Consumption rate:  &nbsp&nbsp&nbsp<span style="color: #097054; ">' + data_list[this.x]['consumption_rate'] + ' tins/month</span> </span>';
@@ -89,7 +105,7 @@
             plotOptions: {
                 bar: {
                     dataLabels: {
-                        enabled: true
+                        enabled: false
                     }
                 }
             },
