finalized work on homepage and made seeding more robust to prevent duplicates

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
       <iframe id="main-display" style="width: 50%; height: 90vh; border: none; overflow: auto;" src="/home/map_main"></iframe>
     </div>
     <div class="cell" style="vertical-align: top;width: 65%;">
-      <iframe id="report-display" style="width: 100%; height: 80vh;overflow: auto;" ></iframe>
+      <iframe id="report-display" style="border:none;width: 100%; height: 80vh;overflow: auto;" ></iframe>
     </div>
   </div>
 </div>
