--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,11 +43,11 @@
 
 <div id="main" class="table" style="width: 99%; height: 83vh; border: 0px solid #000; top: 50px; position: absolute;">
   <div class="row">
-    <div class="cell" style="width: 30%;">
+    <div class="well span3" style="text-align: center;" >
       <iframe id="main-display" style="width: 50%; height: 90vh; border: none; overflow: auto;" src="/home/map_main"></iframe>
     </div>
     <div class="cell" style="vertical-align: top;width: 65%;">
-      <iframe id="report-display" style="border:none;width: 100%; height: 80vh;overflow: auto;" ></iframe>
+      <iframe id="report-display" style="width: 100%;border: none; height: 80vh;overflow: auto;" ></iframe>
     </div>
   </div>
 </div>
@@ -74,7 +74,7 @@
     function switchViews(){
         clearTimeout(timerHnd);
 
-        window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "red"
+        //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "red"
 
         if ((current_pos + 1) >= sites.length)
         {
@@ -85,19 +85,22 @@
             current_pos += 1;
         }
 
-        window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "green"
+        //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "green"
 
         __$("report-display").setAttribute("src", "/report/months_of_stock_main?site="+ sites[current_pos]);
         timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
     }
 
     function resizeTable(){
-        __$("main").style.height = (window.innerHeight - 150) + "px";
+        __$("main").style.height = (window.innerHeight - 100) + "px";
 
-        __$("main-display").style.height = (window.innerHeight - 150) + "px";
+        __$("main-display").style.height = (window.innerHeight - 100) + "px";
 
-        __$("main-display").style.width = (window.innerWidth - ((window.innerHeight ) * 2 / 1.5)) + "px";
+        __$("report-display").style.height = (window.innerHeight - 100) + "px";
 
+        __$("main-display").style.width = (window.innerWidth - ((window.innerHeight ) * 2 / 1.4)) + "px";
+
+        __$("report-display").style.width = (window.innerWidth - ((window.innerHeight ) * 0.5)) + "px";
     }
 
     timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
