--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,8 +43,8 @@
 
 <div id="main" class="table" style="width: 99%; height: 83vh; border: 0px solid #000; top: 50px; position: absolute;">
   <div class="row">
-    <div class="well span3" style="text-align: center;" >
-      <iframe id="main-display" style="width: 50%; height: 90vh; border: none; overflow: auto;" src="/home/map_main"></iframe>
+    <div style="text-align: center;background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.05);border-radius: 4px;" >
+      <iframe id="main-display" style=" height: 90vh; border: none; overflow: auto;" src="/home/map_main"></iframe>
     </div>
     <div class="cell" style="vertical-align: top;width: 65%;">
       <iframe id="report-display" style="width: 100%;border: none; height: 80vh;overflow: auto;" ></iframe>
@@ -98,7 +98,7 @@
 
         __$("report-display").style.height = (window.innerHeight - 100) + "px";
 
-        __$("main-display").style.width = (window.innerWidth - ((window.innerHeight ) * 2 / 1.4)) + "px";
+        __$("main-display").style.width = (window.innerWidth - ((window.innerHeight ) * 2 / 1.3)) + "px";
 
         __$("report-display").style.width = (window.innerWidth - ((window.innerHeight ) * 0.5)) + "px";
     }
