fixed bug i nscript for infinity

--- a/app/views/home/map_main.html.erb
+++ b/app/views/home/map_main.html.erb
@@ -87,7 +87,7 @@
   <%=javascript_include_tag "Charts/d3.min"%>
 </head>
 <body onresize="resizeSVG()">
-<div id="main" style="padding: 0px; text-align: center; height: 1056px; overflow: hidden; width: 100%;"></div>
+<div id="main" style="padding: 0px; text-align: center; overflow: hidden; width: 100%;"></div>
 <script src="/javascripts/d3.js" charset="utf-8"></script>
 <script>
 
