added month of stock report - working

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -97,7 +97,7 @@ img {
       <img class="introIcon" src="/images/aggregate.png">
       <div class="introItemText">
         <div class="introItemHeader">Site physical stock</div>
-        <div>View how fast drugs are being dispensed.</div>
+        <div>View summary of drugs that are at a site.</div>
       </div>
     </div>
 
