--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -1,5 +1,10 @@
 <script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+<script type="text/javascript">
+    function switch_site(site)
+    {
+        document.getElementById("chart").setAttribute("src", "/report/months_of_stock?site_name="+ site);
+    }
+</script>
 <script>
     var drug_map = {}
     <%@drug_map.each do |map|%>
@@ -11,15 +16,16 @@
 </script>
 
 <%if params[:name] == "months_of_stock"%>
-    <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>;" name="site_name"
-            onchange="loadSiteChart(this.value, 0, 9)">
+  Site name :  <select id="sites" style="margin-top:1%;  width: <%= (@stocks.blank? ? "25%" : "50%")%>;" name="site_name"
+            onchange="switch_site(this.value)">
+  <option value="">[ - Select site - ]</option>
       <% (@sites || []).each do |site| %>
           <option><%= site %></option>
       <% end %>
     </select>
 <%else%>
     <select id="sites" style="margin-left: 3%; width: <%= (@stocks.blank? ? "25%" : "50%")%>;" name="site_name"
-            onchange="loadSiteChart(this.value, 0, 9)">
+            onchange="loadSiteChart(this.value)">
       <% (@drugs || []).each do |dg| %>
           <option value="<%= dg%>"><%= @d_map[dg] %></option>
       <% end %>
@@ -28,9 +34,7 @@
     <span style="color: lightblue; font-size: 16px;"><%=   params[:end_date].to_date.strftime("%d-%b- %Y") rescue ("") %></span>
 <%end%>
 
-<div id="chart" style=" width: 100%;height: 70vh;">
-
-</div>
+<iframe id="chart" style="border: none; width: 100%;height: 82vh;"></iframe>
 
 <script type="text/javascript">
     <!--
@@ -55,16 +59,16 @@
     <%end%>
     <%end%>
 
-    function loadSiteChart(site, min, max, drg){
+    function loadSiteChart(site){
 
         <% if params[:name] == "months_of_stock" %>
-        jQuery('#chart').empty().html("<span style='padding-left: 43.5%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=' + site + "&min=" + min + "&max=" + max);
+        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=kawale');
         <% elsif params[:name] == "stock_movement" %>
         <%if @drugs.blank?%>
-        jQuery('#chart').empty().html("<span style='padding-left: 20.5%; width: 100%; text-align: center; font-size: 30px;'> \n\
+        jQuery('#chart').empty().html("<span style='padding-left: 20.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'> \n\
                                                                                 No stock details found for specified time range </span>")
         <%else%>
-        jQuery('#chart').empty().html("<span style='padding-left: 43.5%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/stock_movement?start_date=<%= params[:start_date] %>&end_date=<%= params[:end_date] %>&site_name=<%= params[:site_name] %>&drug_name=' + escape(site));
+        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/stock_movement?start_date=<%= params[:start_date] %>&end_date=<%= params[:end_date] %>&site_name=<%= params[:site_name] %>&drug_name=' + escape(site));
         <%end%>
         <%end%>
     }
@@ -133,7 +137,6 @@
         return node;
     }
 
-    loadSiteChart(document.getElementById("sites").value, 0, 9);
 
     // loadSite(document.getElementById("sites").value);
     //holder = document.getElementById("data-holder")
