changed footer width and stock out reports

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
         </section>
         </div> <!-- /container -->
 
-        <div class="footer">
+        <div class="footer" style="height: 40px !important;bottom: 0;line-height: 0px !important; ">
           <div class="container" style="text-align: center;">
             <p class="text-muted credit"><%=app_name%> <a target="_blank" href="http://www.baobabhealth.org">baobabhealth.org</a>.</p>
           </div>
