--- a/app/views/report/months_of_stock.erb
+++ b/app/views/report/months_of_stock.erb
@@ -25,7 +25,7 @@
                 spacingLeft: 10,
                 spacingRight: 10,
                 // Explicitly tell the width and height of a chart
-                height: (window.innerHeight - 120)
+                height: (window.innerHeight - 70)
 
             },
             title: {
@@ -128,12 +128,12 @@
         correctedWeights.push({y: val, color: col});
         <% end %>
 
-        return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, pointWidth: 15}];
+        return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, pointWidth: 20}];
     }
 
 </script>
 
 
-<div id="container">
+<div id="container" style="width: 100%;margin-right: auto; margin-left: auto;margin-bottom: 10vh;">
 
 </div>
