--- a/app/views/report/months_of_stock_main.html.erb
+++ b/app/views/report/months_of_stock_main.html.erb
@@ -25,7 +25,7 @@
                 spacingLeft: 10,
                 spacingRight: 10,
                 // Explicitly tell the width and height of a chart
-                height: (window.innerHeight - 50)
+                height: 300//(window.innerHeight - 50)
 
             },
             title: {
